<resources>
    <string name="app_name">#APKPLZ</string>
    <string name="add_apk_title">Add APK</string>

    <!-- Toolbar Main -->
    <string name="toolbar_main_search">Search</string>
    <string name="toolbar_settings">Settings</string>

    <!-- Toolbar Add Item -->
    <string name="toolbar_add_cancel">Cancel</string>
    <string name="toolbar_add_upload">Upload</string>
    <string name="toolbar_main_back">Back</string>

    <!-- Navigation Title -->
    <string name="title_home">Home</string>
    <string name="title_developers">Developers</string>
    <string name="title_favorites">Popular</string>
    <string name="title_profile">Profile</string>

    <!-- Fragments -->
    <string name="fragment_home">Home</string>
    <string name="fragment_developers_top">Top</string>
    <string name="fragment_developers_all">All</string>
    <string name="fragment_popular">Popular</string>
    <string name="fragment_profile">Profile</string>

    <!-- Tabs Titles -->
    <string name="tab_title_top_dev">Top Developers</string>
    <string name="tab_title_all_dev">All Developers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_link_to_login">I have account.</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">Log In</string>
    <string name="btn_link_to_register">No account? Register!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Go to Log In</string>
    <string name="sign_out">Sign Out</string>

    <string name="facebook_app_id" translatable="false">101761610395605</string>
    <string name="login">Login</string>
    <string name="loading">Loading...</string>
    <string name="login_with_google">Log In with Google</string>
    <string name="choose_developer">Choose Developer</string>


    <string name="dev_prompt">Choose Developer</string>
    <string-array name="developers">
        <item>Bla-Bla</item>
        <item>Add dpi</item>
    </string-array>

    <string name="app_prompt">Choose a Developer</string>
    <string name="what_new">What\'s New</string>
    <string name="add_developer">Add</string>
    <string name="dialog_developer_name">Developer Name</string>
    <string name="btn_add_developer">Add</string>
    <string name="name">dev_name_text_field</string>
    <string name="dev_name_text_field">Developer name</string>
    <string name="version">App version</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="about_card1_message">#APKPLZ is a Diploma Project</string>
    <string name="card_app_version">Version: 0.1</string>
    <string name="about_card2_title">Get more information</string>
    <string name="about_version">Version:</string>
    <string name="toolbar_about">About</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Paul Trinko</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="about_activity_title">About</string>
    <string name="about_email_intent">About:APKPLZ</string>
    <string name="about_not_found_email">Email not found</string>
    <string name="toolbar_logout">Log Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="file_name">File name</string>
    <string name="btn_choose_file">Choose File</string>
    <string name="latest_update">Latest update&#160;</string>
    <string name="by">by</string>
    <string name="apps">&#160;apps</string>
    <string name="latest_uploads">Latest Uploads</string>
    <string name="change_language">Change Language</string>
    <string name="french_language">French</string>
    <string name="settings_activity_title">Settings</string>
    <string name="russian_language">Russian</string>
    <string name="english_language">English</string>
    <string name="apps_number">Apps Number</string>
    <string name="dev_detail_latest_update">Latest Update</string>
    <string name="uploading">Uploading</string>
    <string name="uploadIs">Upload is&#160;</string>
    <string name="fileUploaded">File Uploaded</string>
    <string name="btn_download">Download File</string>
</resources>
