<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_developers"
        android:enabled="true"
        android:icon="@drawable/ic_developers"
        android:title="@string/title_developers"/>

    <item
        android:id="@+id/navigation_popular"
        android:enabled="true"
        android:icon="@drawable/ic_popular"
        android:title="@string/title_popular"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>
</menu>
