<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorBackground"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/change_language"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        />

    <Button
        android:id="@+id/btn_ru"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/russian_language"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        style="@style/Base.Widget.AppCompat.Button.Colored"
        />

    <Button
        android:id="@+id/btn_eng"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/english_language"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        />

    <Button
        android:id="@+id/btn_fr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/french_language"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        />


</LinearLayout>