<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context=".MainActivity"-->

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/toolbar_main_search"-->
        <!--android:icon="@drawable/ic_search"-->
        <!--app:showAsAction="always"  />-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->

    <!--<item-->
        <!--android:id="@+id/action_back"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/toolbar_main_back"-->
        <!--android:icon="@drawable/ic_back"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:visible="false"/>-->

    <item
        android:id="@+id/settings"
        android:orderInCategory="300"
        android:title="@string/toolbar_settings"
        android:icon="@drawable/ic_more"
        android:visible="true"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="300"
        android:title="@string/toolbar_about"
        android:icon="@drawable/ic_more"
        android:visible="true"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="300"
        android:title="@string/toolbar_logout"
        android:icon="@drawable/ic_more"
        android:visible="true"/>

    <!--<item-->
        <!--android:id="@+id/action_cancel"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/toolbar_add_cancel"-->
        <!--android:icon="@drawable/ic_close"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:visible="false"/>-->

    <!--<item-->
        <!--android:id="@+id/action_add"-->
        <!--android:orderInCategory="400"-->
        <!--android:title="@string/toolbar_add_upload"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:visible="false"/>-->

</menu>