<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.example.pollyglot.apkplz.auth.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:theme="@style/APKPLZTheme"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                app:theme="@style/APKPLZTheme"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/btn_forgot_password"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_login"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />
            <!--android:foreground="?attr/selectableItemBackground"-->
            <!--android:background="@drawable/button_shape"-->

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"

            android:id="@+id/button_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:elevation="2dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textSize="14sp"
            android:textStyle="normal"
            facebook:com_facebook_login_text="Facebook Login"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <!--<com.facebook.login.widget.LoginButton-->
                <!--xmlns:facebook="http://schemas.android.com/apk/res-auto"-->

                <!--android:id="@+id/button_facebook_login"-->
                <!--android:layout_width="170dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_marginTop="4dp"-->
                <!--android:elevation="2dp"-->
                <!--android:paddingBottom="11dp"-->
                <!--android:paddingTop="11dp"-->
                <!--android:textSize="14sp"-->
                <!--android:textStyle="normal"-->
                <!--facebook:com_facebook_login_text="Facebook Login"/>-->

            <!--<com.google.android.gms.common.SignInButton-->
                <!--android:id="@+id/login_with_google"-->
                <!--android:layout_width="170dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/login_with_google"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--/>-->
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button_top_border"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:foreground="?attr/selectableItemBackground"        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="70dp"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>