<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/card_about_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_get_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/about_card2_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_get_more_info"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:id="@+id/developer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                />
                <!--android:src="@mipmap/ic_shop_black_24dp" -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/developed_by_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/developed_by"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/developer_name"
                    android:textSize="16sp"
                    android:layout_below="@id/developed_by_text"/>

            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/developer_card"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:id="@+id/email_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/developer_card"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="72dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:text="@string/email"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_below="@id/email_card"/>

        <LinearLayout
            android:id="@+id/facebook_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_card"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="72dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:text="@string/facebook"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_below="@id/facebook_card"/>

        <LinearLayout
            android:id="@+id/instagram_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebook_card"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="72dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:text="@string/instagram"/>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>